--- a/manifest.json
+++ b/manifest.json
@@ -1,41 +1,25 @@
 {
-	"name": "Bitcoin Fetcher",
-	"short_name": "Bitcoin Fetcher",
-	"description": "Fetch Bitcoin values",
-	"icons": [
-		{
-			"src": "icons/icon-128x128.png",
-			"sizes": "128x128",
-			"type": "image/png"
-		},	
-		{
-			"src": "icons/icon-144x144.png",
-			"sizes": "144x144",
-			"type": "image/png"
-		},
-		{
-			"src": "icons/icon-152x152.png",
-			"sizes": "192x192",
-			"type": "image/png"
-		},
-		{
-			"src": "icons/icon-192x192.png",
-			"sizes": "192x192",
-			"type": "image/png"
-		},
-		{
-			"src": "icons/icon-256x256.png",
-			"sizes": "256x256",
-			"type": "image/png"
-		},
-		{
-			"src": "icons/icon-512x512.png",
-			"sizes": "512x512",
-			"type": "image/png"
-		}
-	],
-	"start_url": "./",
-	"display": "standalone",
-	"background_color": "white",
-	"theme_color": "#685f85"
+  "short_name": "Stock App",
+  "name": "Stock App",
+  "icons": [
+    {
+      "src": "favicon.ico",
+      "sizes": "64x64 32x32 24x24 16x16",
+      "type": "image/x-icon"
+    },
+    {
+      "src": "logo192.png",
+      "type": "image/png",
+      "sizes": "192x192"
+    },
+    {
+      "src": "logo512.png",
+      "type": "image/png",
+      "sizes": "512x512"
+    }
+  ],
+  "start_url": ".",
+  "display": "standalone",
+  "theme_color": "#000000",
+  "background_color": "#ffffff"
 }
