Add stock json data

--- a/JAMK/stocks-code/package.json
+++ b/JAMK/stocks-code/package.json
@@ -2,7 +2,7 @@
   "name": "stocks-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://programmer314.github.io/JAMK/stock-app",
+  "homepage": "https://programmer314.github.io/JAMK/stocks-app",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -30,8 +30,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-	"predeploy": "npm run build",
-	"deploy": "gh-pages -b master -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
