--- a/JAMK/stocks-code/package.json
+++ b/JAMK/stocks-code/package.json
@@ -30,7 +30,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "deploy": "gh-pages -f -b master -e ./JAMK/stocks-app -d build",
+	"predeploy": "npm run build",
+    "deploy": "gh-pages -f -b master -e .\JAMK\stocks-app -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
